useful links done

--- a/sitemap.html
+++ b/sitemap.html
@@ -14,8 +14,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/events.css">
+  <link rel="stylesheet" href="./css/pages/sitemap.css">
 </head>
 
 <body>
@@ -156,8 +157,9 @@
       </div>
     </nav>
   </header>
+
   <section>
-    <div class="">
+    <div>
       <div class="row px-4">
         <div class="col-sm-12">
           <div class="ismv3-intro-banner"></div>
@@ -165,54 +167,78 @@
       </div>
     </div>
   </section>
+
   <section class="p-5">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
+        <div class="col-12 col-md-6 col-xl-3 col-xxl-4">
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">About Us</div>
+
+            <div class="ism-sitemap__info_content">
+              <!--<a class="ism-sitemap__info_item" href="/#">Our Ministers</a>--><!-- <a class="ism-sitemap__info_item" href="/our-ministers-state">Our Ministers of State</a> --><a
+                class="ism-sitemap__info_item" href="#">About ISM</a> <a class="ism-sitemap__info_item" href="#">About
+                SemiconIndia Programme</a> <a class="ism-sitemap__info_item" href="#n">ISM Vision & Objectives</a>  <a class="ism-sitemap__info_item"
+                href="#">ISM Team</a> <a class="ism-sitemap__info_item" href="#">Advisory
+                Committee</a><a class="ism-sitemap__info_item" href="#">Ism Committee</a><a
+                class="ism-sitemap__info_item" href="#">Tenders</a><a class="ism-sitemap__info_item"
+                href="#">Notifications</a> <a class="ism-sitemap__info_item"
+                href="#">Useful Links</a></div>
+          </div>
         </div>
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img
-                src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/ses_gallery/ses_gallery_2024_4.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
+
+        <div class="col-12 col-md-6 col-xl-3 col-xxl-3">
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">SemiconIndia</div>
+
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="#">2024</a><a class="ism-sitemap__info_item" href="#">2023</a> <a
+                class="ism-sitemap__info_item" href="#">2022</a> <a class="ism-sitemap__info_item"
+                href="#">Workshop on MEITY-NSF</a> <a class="ism-sitemap__info_item"
+                href="#">Semiconindia Conference 2023</a></div>
+          </div>
+          &nbsp;
+
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">Social Links</div>
+
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item"
+                href="https://twitter.com/i/flow/login?redirect_after_login=%2FSemicon_India">Twitter</a> <a
+                class="ism-sitemap__info_item" href="https://www.youtube.com/@IndiaSemiconductorMission">YouTube</a> <a
+                class="ism-sitemap__info_item"
+                href="https://www.linkedin.com/company/indiasemiconductormission">LinkedIn</a> <a
+                class="ism-sitemap__info_item" href="https://www.instagram.com/ism_indiasemiconductor/">Instagram</a> <a
+                class="ism-sitemap__info_item" href="https://webcast.gov.in/meity/semiconindia">Webcast</a></div>
+          </div>
         </div>
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/SES_Thumbnail.webp"
-                class="img-fluid br-8">
-              <div class="event-content py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
+
+        <div class="col-12 col-md-6 col-xl-3 col-xxl-3">
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">Schemes</div>
+
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item"
+                href="#">Semiconductor Fabs</a> <a class="ism-sitemap__info_item"
+                href="#">Display Fabs</a> <a class="ism-sitemap__info_item"
+                href="#">Compound Semiconductors / Silicon Photonics / Sensors Fab / Discrete
+                Semiconductors Fab And Semiconductor ATMP/OSAT Facilities</a> <a class="ism-sitemap__info_item"
+                href="#">Design Linked Incentive</a></div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-3 col-xxl-3">
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">Quick Links</div>
+
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="#">Events</a> <a
+                class="ism-sitemap__info_item" href="#">Downloads</a> <a class="ism-sitemap__info_item"
+                href="#">Gallery</a><a class="ism-sitemap__info_item" href="#">Gallery July
+                2023</a><a class="ism-sitemap__info_item" href="#">Gallery Feb 2023</a><a
+                class="ism-sitemap__info_item" href="#">Gallery April 2022</a><a
+                class="ism-sitemap__info_item" href="#">Contact Us</a><a class="ism-sitemap__info_item"
+                href="#">Reach Us</a><a class="ism-sitemap__info_item" href="#">Career</a> <a
+                class="ism-sitemap__info_item" href="#">FAQ’s</a> <a class="ism-sitemap__info_item"
+                href="#">Website Policies</a> <a class="ism-sitemap__info_item"
+                href="#">Privacy Policies</a></div>
+          </div>
         </div>
       </div>
     </div>
