--- a/career.html
+++ b/career.html
@@ -51,14 +51,14 @@
       <div class="row">
         <div class="col-12">
           <div class="ism-header__main_box">
-            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="https://www.meity.gov.in/"
                 target="_blank"><img alt="Miety logo" class="img-fluid" src="images/header/meity_header_logo.png"> </a>
             </div>
-            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="/index.html"
                 target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/ism_header_logo.png"></a>
             </div>
-            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="https://dic.gov.in/"
                 target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/digi_india_header_logo.png"></a>
             </div>
@@ -75,22 +75,22 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              About Us
+              About ISM
             </a>
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
+              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia Programme</a>
               <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
-              <a class="dropdown-item" href="#">ISM Committee</a>
+              <a class="dropdown-item" href="/ism-commitee.html">ISM Committee</a>
               <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
-              <a class="dropdown-item" href="#">Useful Links</a>
+              <a class="dropdown-item" href="/useful-links.html">Useful Links</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -99,9 +99,10 @@
               SemiconIndia
             </a>
             <div class="dropdown-menu" aria-labelledby="semiconDropdown">
-              <a class="dropdown-item" href="#">2024</a>
-              <a class="dropdown-item" href="#">2023</a>
-              <a class="dropdown-item" href="#">2022</a>
+              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
+              <a class="dropdown-item" href="#">Semicon India 2024</a>
+              <a class="dropdown-item" href="#">Semicon India 2023</a>
+              <a class="dropdown-item" href="#">Semicon India 2022</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -112,8 +113,7 @@
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="#">Semiconductor Fabs</a>
               <a class="dropdown-item" href="#">Display Fabs</a>
-              <a class="dropdown-item" href="#">Compound Semiconductors / Silicon Photonics / Sensors Fab / Discrete
-                Semiconductors Fab And Semiconductor ATMP/OSAT Facilities</a>
+              <a class="dropdown-item" href="#">Compound/ATMP/OSAT</a>
               <a class="dropdown-item" href="#">Design Linked Incentive</a>
             </div>
           </li>
@@ -124,19 +124,20 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="#">Notice</a>
-              <a class="dropdown-item" href="#">Tenders Fabs</a>
+              <a class="dropdown-item" href="#">Tenders</a>
               <a class="dropdown-item" href="#">Downloads</a>
               <a class="dropdown-item" href="/career.html">Careers</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/events.html">Events</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">FAQs</a>
+            <a class="nav-link" href="/events.html">Events</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/faqs.html">FAQs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact-us.html">Contact Us</a>
@@ -145,9 +146,12 @@
       </div>
       <div class="social-part">
         <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png" alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+            alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+            src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+            alt=""></a>
       </div>
     </nav>
   </header>
@@ -184,62 +188,150 @@
   </section>
 
   <section class="scheme-section p-5">
-    <div class="container-fluid bg-primary-aqua br-8">
-      <div class="row justify-content-between">
-        <div class="col-12">
-          <!-- <p class="main-heading"><span><img src="images/icons/schemes_icon.png"></span>ISM</p> -->
+    <div class="container-fluid bg-primary-aqua br-8 career-tabs">
+      <div class="row align-items-center my-4">
+        <div class="col-4">
           <p class="sub-heading">Job Posts</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <div class="job-post-card">
-            <div class="row">
-              <div class="col">
-                <p class="job-post-card__title m-0">Advisor (Technology)</p>
-              </div>
-              <div class="col align-content-center text-right p-0">
-                <a href="#" target="_blank" class="theme-Btn theme-Btn-dark job-apply-btn">Apply</a>
-              </div>
-            </div>
-            <p>ISM</p>
-            <div class="job-post-card__additionalInfo d-flex">
-              <div class="info pr-4">
-                  <span class="fas fa-briefcase"></span>
-                  <span class="label">20+ Years</span>
-              </div>
-              <div class="info">
-                  <span class="fas fa-map-marker-alt"></span>
-                  <span class="label">Delhi, India</span>
-              </div>
-          </div>
-            <p>India Semiconductor Mission (ISM) is making relentlessefforts to develop the country's semiconductors and displaymanufacturing ecosystem. Initiatives are being taken to createawareness, maximize outreach, talent pool generation, supply chaincreation, etc. to reinforce the objective of attracting greater investmentand participation in the Semic</p>
-            <p>Last Date: 28.07.2024</p>
+        <div class="col-8">
+          <div class="text-right">
+            <ul class="nav nav-tabs" id="myTab2" role="tablist"
+            style="justify-content: end;background: #F3F6FD;padding: 16px;border:none;display: inline-flex;background: #fff;border-radius: 8px;">
+            <li class="nav-item" role="presentation"><button aria-controls="photos" aria-selected="true"
+                class="nav-link active" data-bs-target="#photos" data-bs-toggle="tab" id="photos-tab" role="tab"
+                type="button"><span class="px-3">Photos</span></button></li>
+            <li class="nav-item" role="presentation"><button aria-controls="videos" aria-selected="false"
+                class="nav-link" data-bs-target="#videos" data-bs-toggle="tab" id="videos-tab" role="tab"
+                type="button"><span class="px-3">Videos</span></button></li>
+          </ul>
           </div>
         </div>
-        <div class="col-6">
-          <div class="job-post-card">
-            <div class="row">
-              <div class="col">
-                <p class="job-post-card__title m-0">Chief Strategy Officer (CSO)</p>
+      </div>
+
+      <div class="row">
+        <div class="tab-content" id="myTabSemicon2">
+          <div aria-labelledby="photos-tab" class="tab-pane fade active show" id="photos" role="tabpanel">
+            <div class="row ism-elem10_wrap m-0">
+              <div class="col-6">
+                <div class="job-post-card">
+                  <div class="row">
+                    <div class="col">
+                      <p class="job-post-card__title m-0">Advisor (Technology)</p>
+                    </div>
+                    <div class="col align-content-center text-right p-0">
+                      <a href="#" target="_blank" class="theme-Btn theme-Btn-dark job-apply-btn">Apply</a>
+                    </div>
+                  </div>
+                  <p>ISM</p>
+                  <div class="job-post-card__additionalInfo d-flex">
+                    <div class="info pr-4">
+                      <span class="fas fa-briefcase"></span>
+                      <span class="label">20+ Years</span>
+                    </div>
+                    <div class="info">
+                      <span class="fas fa-map-marker-alt"></span>
+                      <span class="label">Delhi, India</span>
+                    </div>
+                  </div>
+                  <p>India Semiconductor Mission (ISM) is making relentlessefforts to develop the country's
+                    semiconductors and displaymanufacturing ecosystem. Initiatives are being taken to createawareness,
+                    maximize outreach, talent pool generation, supply chaincreation, etc. to reinforce the objective of
+                    attracting greater investmentand participation in the Semic</p>
+                  <p>Last Date: 28.07.2024</p>
+                </div>
               </div>
-              <div class="col align-content-center text-right p-0">
-                <a href="#" target="_blank" class="theme-Btn theme-Btn-dark job-close-btn">Closed</a>
+              <div class="col-6">
+                <div class="job-post-card">
+                  <div class="row">
+                    <div class="col">
+                      <p class="job-post-card__title m-0">Chief Strategy Officer (CSO)</p>
+                    </div>
+                    <div class="col align-content-center text-right p-0">
+                      <a href="#" target="_blank" class="theme-Btn theme-Btn-dark job-apply-btn">Apply</a>
+                    </div>
+                  </div>
+                  <p>ISM</p>
+                  <div class="job-post-card__additionalInfo d-flex">
+                    <div class="info pr-4">
+                      <span class="fas fa-briefcase"></span>
+                      <span class="label">20+ Years</span>
+                    </div>
+                    <div class="info">
+                      <span class="fas fa-map-marker-alt"></span>
+                      <span class="label">Delhi, India</span>
+                    </div>
+                  </div>
+                  <p>India Semiconductor Mission (ISM) is making relentlessefforts to develop the country's
+                    semiconductors and displaymanufacturing ecosystem. Initiatives are being taken to createawareness,
+                    maximize outreach, talent pool generation, supply chaincreation, etc. to reinforce the objective of
+                    attracting greater investmentand participation in the Semic</p>
+                  <p>Last Date: 28.07.2024</p>
+                </div>
               </div>
             </div>
-            <p>ISM</p>
-            <div class="job-post-card__additionalInfo d-flex">
-              <div class="info pr-4">
-                  <span class="fas fa-briefcase"></span>
-                  <span class="label">20+ Years</span>
-              </div>
-              <div class="info">
-                  <span class="fas fa-map-marker-alt"></span>
-                  <span class="label">Delhi, India</span>
-              </div>
           </div>
-            <p>India Semiconductor Mission (ISM) is making relentlessefforts to develop the country's semiconductors and displaymanufacturing ecosystem. Initiatives are being taken to createawareness, maximize outreach, talent pool generation, supply chaincreation, etc. to reinforce the objective of attracting greater investmentand participation in the Semic</p>
-            <p>Last Date: 28.07.2024</p>
+          <div aria-labelledby="videos-tab" class="tab-pane fade" id="videos" role="tabpanel">
+            <div class="ism-elem10_wrap m-0">
+              <div class="row ism-elem10_wrap m-0">
+                <div class="col-6">
+                  <div class="job-post-card">
+                    <div class="row">
+                      <div class="col">
+                        <p class="job-post-card__title m-0">Advisor (Technology)</p>
+                      </div>
+                      <div class="col align-content-center text-right p-0">
+                        <a href="#" target="_blank" class="theme-Btn theme-Btn-dark job-close-btn">Closed</a>
+                      </div>
+                    </div>
+                    <p>ISM</p>
+                    <div class="job-post-card__additionalInfo d-flex">
+                      <div class="info pr-4">
+                        <span class="fas fa-briefcase"></span>
+                        <span class="label">20+ Years</span>
+                      </div>
+                      <div class="info">
+                        <span class="fas fa-map-marker-alt"></span>
+                        <span class="label">Delhi, India</span>
+                      </div>
+                    </div>
+                    <p>India Semiconductor Mission (ISM) is making relentlessefforts to develop the country's
+                      semiconductors and displaymanufacturing ecosystem. Initiatives are being taken to createawareness,
+                      maximize outreach, talent pool generation, supply chaincreation, etc. to reinforce the objective of
+                      attracting greater investmentand participation in the Semic</p>
+                    <p>Last Date: 28.07.2024</p>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="job-post-card">
+                    <div class="row">
+                      <div class="col">
+                        <p class="job-post-card__title m-0">Chief Strategy Officer (CSO)</p>
+                      </div>
+                      <div class="col align-content-center text-right p-0">
+                        <a href="#" target="_blank" class="theme-Btn theme-Btn-dark job-close-btn">Closed</a>
+                      </div>
+                      
+                    </div>
+                    <p>ISM</p>
+                    <div class="job-post-card__additionalInfo d-flex">
+                      <div class="info pr-4">
+                        <span class="fas fa-briefcase"></span>
+                        <span class="label">20+ Years</span>
+                      </div>
+                      <div class="info">
+                        <span class="fas fa-map-marker-alt"></span>
+                        <span class="label">Delhi, India</span>
+                      </div>
+                    </div>
+                    <p>India Semiconductor Mission (ISM) is making relentlessefforts to develop the country's
+                      semiconductors and displaymanufacturing ecosystem. Initiatives are being taken to createawareness,
+                      maximize outreach, talent pool generation, supply chaincreation, etc. to reinforce the objective of
+                      attracting greater investmentand participation in the Semic</p>
+                    <p>Last Date: 28.07.2024</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -272,10 +364,14 @@
           <h5 class="mb-5">Social Media</h5>
           <ul>
             <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
+                  alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
+                  alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                  alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
@@ -311,6 +407,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
- 
+
 </body>
+
 </html>
