--- a/faqs.html
+++ b/faqs.html
@@ -7,15 +7,10 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/events.css">
+  <link rel="stylesheet" href="./css/pages/faqs.css">
 </head>
 
 <body>
@@ -156,8 +151,9 @@
       </div>
     </nav>
   </header>
+
   <section>
-    <div class="">
+    <div>
       <div class="row px-4">
         <div class="col-sm-12">
           <div class="ismv3-intro-banner"></div>
@@ -165,57 +161,49 @@
       </div>
     </div>
   </section>
+
   <section class="p-5">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Accordion Item #1
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
             </div>
-          </a>
+          </div>
         </div>
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img
-                src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/ses_gallery/ses_gallery_2024_4.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Accordion Item #2
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
             </div>
-          </a>
+          </div>
         </div>
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/SES_Thumbnail.webp"
-                class="img-fluid br-8">
-              <div class="event-content py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Accordion Item #3
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
             </div>
-          </a>
+          </div>
         </div>
       </div>
-    </div>
+      </div>
+ 
   </section>
 
   <footer class="ism-footer">
@@ -244,14 +232,10 @@
           <h5 class="mb-5">Social Media</h5>
           <ul>
             <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
-                  alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
-                  alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                  alt="">Webcast</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
@@ -282,6 +266,8 @@
   <div>
     <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
