--- a/gallery-details.html
+++ b/gallery-details.html
@@ -51,14 +51,14 @@
       <div class="row">
         <div class="col-12">
           <div class="ism-header__main_box">
-            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="https://www.meity.gov.in/"
                 target="_blank"><img alt="Miety logo" class="img-fluid" src="images/header/meity_header_logo.png"> </a>
             </div>
-            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="/index.html"
                 target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/ism_header_logo.png"></a>
             </div>
-            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="https://dic.gov.in/"
                 target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/digi_india_header_logo.png"></a>
             </div>
@@ -75,22 +75,22 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              About Us
+              About ISM
             </a>
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
+              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia Programme</a>
               <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
-              <a class="dropdown-item" href="#">ISM Committee</a>
+              <a class="dropdown-item" href="/ism-commitee.html">ISM Committee</a>
               <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
-              <a class="dropdown-item" href="#">Useful Links</a>
+              <a class="dropdown-item" href="/useful-links.html">Useful Links</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -99,9 +99,10 @@
               SemiconIndia
             </a>
             <div class="dropdown-menu" aria-labelledby="semiconDropdown">
-              <a class="dropdown-item" href="#">2024</a>
-              <a class="dropdown-item" href="#">2023</a>
-              <a class="dropdown-item" href="#">2022</a>
+              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
+              <a class="dropdown-item" href="#">Semicon India 2024</a>
+              <a class="dropdown-item" href="#">Semicon India 2023</a>
+              <a class="dropdown-item" href="#">Semicon India 2022</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -112,8 +113,7 @@
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="#">Semiconductor Fabs</a>
               <a class="dropdown-item" href="#">Display Fabs</a>
-              <a class="dropdown-item" href="#">Compound Semiconductors / Silicon Photonics / Sensors Fab / Discrete
-                Semiconductors Fab And Semiconductor ATMP/OSAT Facilities</a>
+              <a class="dropdown-item" href="#">Compound/ATMP/OSAT</a>
               <a class="dropdown-item" href="#">Design Linked Incentive</a>
             </div>
           </li>
@@ -124,19 +124,20 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="#">Notice</a>
-              <a class="dropdown-item" href="#">Tenders Fabs</a>
+              <a class="dropdown-item" href="#">Tenders</a>
               <a class="dropdown-item" href="#">Downloads</a>
               <a class="dropdown-item" href="/career.html">Careers</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/events.html">Events</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">FAQs</a>
+            <a class="nav-link" href="/events.html">Events</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/faqs.html">FAQs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact-us.html">Contact Us</a>
@@ -145,9 +146,12 @@
       </div>
       <div class="social-part">
         <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png" alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+            alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+            src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+            alt=""></a>
       </div>
     </nav>
   </header>
