--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
       <div class="row">
         <div class="col-12">
           <div class="ism-header__main_box">
-            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="https://www.meity.gov.in/"
                 target="_blank"><img alt="Miety logo" class="img-fluid" src="images/header/meity_header_logo.png"> </a>
             </div>
-            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="/index.html"
                 target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/ism_header_logo.png"></a>
             </div>
-            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="#"
+            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="https://dic.gov.in/"
                 target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/digi_india_header_logo.png"></a>
             </div>
@@ -76,7 +76,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" data-toggle="dropdown" aria-haspopup="true"
@@ -86,12 +86,12 @@
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
+              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia Programme</a>
               <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
-              <a class="dropdown-item" href="#">ISM Committee</a>
+              <a class="dropdown-item" href="/ism-commitee.html">ISM Committee</a>
               <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
-              <a class="dropdown-item" href="#">Useful Links</a>
+              <a class="dropdown-item" href="/useful-links.html">Useful Links</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -100,7 +100,7 @@
               SemiconIndia
             </a>
             <div class="dropdown-menu" aria-labelledby="semiconDropdown">
-              <a class="dropdown-item" href="#">About SemiconIndia</a>
+              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
               <a class="dropdown-item" href="#">Semicon India 2024</a>
               <a class="dropdown-item" href="#">Semicon India 2023</a>
               <a class="dropdown-item" href="#">Semicon India 2022</a>
@@ -138,7 +138,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">FAQs</a>
+            <a class="nav-link" href="/faqs.html">FAQs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact-us.html">Contact Us</a>
@@ -467,11 +467,11 @@
         <div class="col-4">
           <div class="social-cards-body">
             <div class="social-card-content" id="style-3">
-              <!-- <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7239606296226783234" style="
+              <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7239606296226783234" style="
               width: 100%;
-              height: 450px;
-          " frameborder="0" allowfullscreen="" title="Embedded post" id="style-3"></iframe> -->
-              <blockquote class="twitter-tweet">
+              height: 366px;
+          " frameborder="0" allowfullscreen="" title="Embedded post" id="style-3"></iframe>
+              <!-- <blockquote class="twitter-tweet">
                 <p lang="en" dir="ltr">Reinforcing Hon’ble PM <a
                     href="https://twitter.com/narendramodi?ref_src=twsrc%5Etfw">@narendramodi</a>&#39;s vision for <a
                     href="https://twitter.com/hashtag/IndiaTechade?src=hash&amp;ref_src=twsrc%5Etfw">#IndiaTechade</a>,
@@ -482,8 +482,8 @@
                 </p>&mdash; India Semiconductor Mission (@Semicon_India) <a
                   href="https://twitter.com/Semicon_India/status/1672031035465564160?ref_src=twsrc%5Etfw">June 22,
                   2023</a>
-              </blockquote>
-              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+              </blockquote> -->
+              <!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
             </div>
             <div class="social-button text-center pt-4">
               <a href="#" target="_blank" class="theme-Btn theme-Btn-dark"><span><img src="./images/x_btn_icon.png"
