--- a/privacy-policies.html
+++ b/privacy-policies.html
@@ -14,8 +14,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/events.css">
+  <style>
+    .divider-line {
+      background-color: #2F6B99;
+      width: 100%;
+      height: 1px;
+      margin: 20px 0;
+    }
+    .ismv3-intro-banner{
+  background-image: url(././images/banners/privacy-banner.webp);
+  background-position: center;
+  background-size: cover;
+  height: 25vh;
+}
+  </style>
 </head>
 
 <body>
@@ -156,8 +170,9 @@
       </div>
     </nav>
   </header>
+
   <section>
-    <div class="">
+    <div>
       <div class="row px-4">
         <div class="col-sm-12">
           <div class="ismv3-intro-banner"></div>
@@ -165,54 +180,26 @@
       </div>
     </div>
   </section>
+
   <section class="p-5">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img
-                src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/ses_gallery/ses_gallery_2024_4.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/SES_Thumbnail.webp"
-                class="img-fluid br-8">
-              <div class="event-content py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
+        <div class="col-12">
+          <div class="">
+            <h2 class="sub-heading mb-3">Privacy Policy</h2>
+            <p>ISM website does not automatically capture any specific personal information from you (like name, phone
+              number or e-mail address), which allows us to identify you individually.</p>
+            <p>If the ISM website requests you to provide personal information, you will be informed of the particular
+              purposes for which the information is gathered, and adequate security measures will be taken to protect
+              your personal information.</p>
+            <p>We do not sell or share any personally identifiable information volunteered on the ISM website to any
+              third party (public/private). Any information provided to this Website will be protected from loss,
+              misuse, unauthorized access or disclosure, alteration, or destruction. </p>
+            <p>We gather certain information about the User, such as Internet protocol (IP) addresses, domain name,
+              browser type, operating system, the date and time of the visit and the pages visited. We do not attempt to
+              link these addresses with the identity of individuals visiting our site unless an attempt to damage the
+              site has been detected. </p>
+          </div>
         </div>
       </div>
     </div>
