--- a/website-policies.html
+++ b/website-policies.html
@@ -14,8 +14,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/events.css">
+<style>
+.divider-line {
+    background-color: #2F6B99;
+    width: 100%;
+    height: 1px;
+    margin: 20px 0;
+}
+.ismv3-intro-banner{
+  background-image: url(././images/banners/website-banner.webp);
+  background-position: center;
+  background-size: cover;
+  height: 25vh;
+}
+</style>
 </head>
 
 <body>
@@ -156,8 +170,9 @@
       </div>
     </nav>
   </header>
+
   <section>
-    <div class="">
+    <div>
       <div class="row px-4">
         <div class="col-sm-12">
           <div class="ismv3-intro-banner"></div>
@@ -165,54 +180,23 @@
       </div>
     </div>
   </section>
+
   <section class="p-5">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img
-                src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/ses_gallery/ses_gallery_2024_4.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-4">
-          <a href="#">
-            <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/SES_Thumbnail.webp"
-                class="img-fluid br-8">
-              <div class="event-content py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
-              </div>
-            </div>
-          </a>
+        <div class="col-12">
+          <div class="">
+            <h2 class="sub-heading mb-3">Hyper linking Policy</h2>
+            <h3 class="main-heading mb-3 ">Links to external websites/portals</h3>
+            <p>We do not object to you linking directly to the information that is hosted on our site, and no prior permission is required for the same. However, we would like you to inform us about any links provided to our site so that you can be informed of any changes or updates therein. Also, we do not permit our pages to be loaded into frames on your site. Our website’s pages must load into a newly opened browser window for the user.</p>
+            <div class="divider-line mt-4"></div>
+            <h2 class="sub-heading mb-3 mt-4">Intellectual Property Rights Policy</h2>
+            <p>The intellectual property rights of the framework, logos, website, themes, and related content, such as user manuals, FAQs, Help, Website Policies, and Terms of Use, are exclusively owned by ISM. Any use or distribution may be done with explicit permission from ISM. Any infringements of the same, any misuse or inappropriate use will be liable for prosecution.</p>
+            <div class="divider-line mt-4"></div>
+            <h2 class="sub-heading mb-3 mt-4">Copyright Policy</h2>
+            <p>Material featured on this Website may be reproduced free of charge. However, the material has to be reproduced accurately and not be used in a derogatory manner or a misleading context. Wherever the material is being published or issued to others, the source must be prominently acknowledged. However, the permission to reproduce this material shall not extend to any material which is identified as being the copyright of a third party. Authorization to reproduce such material must be obtained from the departments/copyright holders concerned.</p>
+            <p>These terms and conditions shall be governed by and construed in accordance with the Indian Laws. Any dispute arising under these terms and conditions shall be subject to the exclusive jurisdiction of the courts of India.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -244,14 +228,10 @@
           <h5 class="mb-5">Social Media</h5>
           <ul>
             <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
-                  alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
-                  alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                  alt="">Webcast</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
