footer links connected

--- a/events.html
+++ b/events.html
@@ -86,7 +86,6 @@
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia Programme</a>
               <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="/ism-commitee.html">ISM Committee</a>
@@ -173,7 +172,7 @@
             <div class="main-event-cards">
               <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
                 class="img-fluid br-8">
-              <div class="event-content  py-3">
+              <div class="event-content pt-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
                       style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
@@ -189,7 +188,7 @@
               <img
                 src="https://d2p5j06zete1i7.cloudfront.net/static/semiconindia2024/ses_gallery/ses_gallery_2024_4.webp"
                 class="img-fluid br-8">
-              <div class="event-content  py-3">
+              <div class="event-content pt-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
                       style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
@@ -204,7 +203,7 @@
             <div class="main-event-cards">
               <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/SES_Thumbnail.webp"
                 class="img-fluid br-8">
-              <div class="event-content py-3">
+              <div class="event-content pt-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
                 <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
                       style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
@@ -221,11 +220,11 @@
   <footer class="ism-footer">
     <div class=" ism-footer-inner-box">
       <div class="ism-footer-logo ism-footer-box-size">
-        <a href="" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
+        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
             width="70%"></a>
-        <a href="" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
+        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
             width="55%"></a>
-        <a href="" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
+        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
             alt="" width="55%;"></a>
       </div>
       <div class="vl"></div>
@@ -233,11 +232,11 @@
         <div class="ism-footer-useful-links">
           <h5 class="mb-5">Useful Links</h5>
           <ul>
-            <li><a href="#"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="#"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
-            <li><a href="#"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
+            <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
+            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
+            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
             <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
-            <li><a href="#"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
+            <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
         </div>
         <div class="ism-footer-useful-links">
@@ -272,7 +271,7 @@
           </div>
           <div class="ism-footer-iframe mt-2 px-2">
             <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/icons/qr_code_new.webp" alt=""
-              style="width:150px;height:150px;">
+              style="width:150px;height:150px;border-radius: 8px;">
           </div>
         </div>
       </div>
