--- a/gallery-details.html
+++ b/gallery-details.html
@@ -85,7 +85,6 @@
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia Programme</a>
               <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="/ism-commitee.html">ISM Committee</a>
@@ -370,11 +369,11 @@
   <footer class="ism-footer">
     <div class=" ism-footer-inner-box">
       <div class="ism-footer-logo ism-footer-box-size">
-        <a href="" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
+        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
             width="70%"></a>
-        <a href="" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
+        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
             width="55%"></a>
-        <a href="" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
+        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
             alt="" width="55%;"></a>
       </div>
       <div class="vl"></div>
@@ -382,21 +381,25 @@
         <div class="ism-footer-useful-links">
           <h5 class="mb-5">Useful Links</h5>
           <ul>
-            <li><a href="#"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="#"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
-            <li><a href="#"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
+            <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
+            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
+            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
             <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
-            <li><a href="#"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
+            <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
         </div>
         <div class="ism-footer-useful-links">
           <h5 class="mb-5">Social Media</h5>
           <ul>
             <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
+                  alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
+                  alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                  alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
@@ -417,7 +420,7 @@
           </div>
           <div class="ism-footer-iframe mt-2 px-2">
             <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/icons/qr_code_new.webp" alt=""
-              style="width:150px;height:150px;">
+              style="width:150px;height:150px;border-radius: 8px;">
           </div>
         </div>
       </div>
