--- a/ism-vision.html
+++ b/ism-vision.html
@@ -111,11 +111,11 @@
               aria-haspopup="true" aria-expanded="false">
               Schemes
             </a>
-            <div class="dropdown-menu" aria-labelledby="schemesDropdown">
-              <a class="dropdown-item" href="#">Semiconductor Fabs</a>
-              <a class="dropdown-item" href="#">Display Fabs</a>
-              <a class="dropdown-item" href="#">Compound/ATMP/OSAT</a>
-              <a class="dropdown-item" href="#">Design Linked Incentive</a>
+            <div class="dropdown-menu" aria-labelledby="semiconDropdown">
+              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
+              <a class="dropdown-item" href="https://ism.gov.in/semicon-2024.html">SemiconIndia 2024</a>
+              <a class="dropdown-item" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a>
+              <a class="dropdown-item" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a>
             </div>
           </li>
           <li class="nav-item dropdown">
