--- a/website-policies.html
+++ b/website-policies.html
@@ -114,9 +114,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="semiconDropdown">
               <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
-              <a class="dropdown-item" href="#">Semicon India 2024</a>
-              <a class="dropdown-item" href="#">Semicon India 2023</a>
-              <a class="dropdown-item" href="#">Semicon India 2022</a>
+              <a class="dropdown-item" href="https://ism.gov.in/semicon-2024.html">SemiconIndia 2024</a>
+              <a class="dropdown-item" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a>
+              <a class="dropdown-item" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a>
             </div>
           </li>
           <li class="nav-item dropdown">
