--- a/downloads.html
+++ b/downloads.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/about-us.css">
+  <link rel="stylesheet" href="./css/pages/download.css">
 </head>
 
 <body>
@@ -126,7 +126,8 @@
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="#">Notice</a>
               <a class="dropdown-item" href="#">Tenders</a>
-              <a class="dropdown-item" href="#">Downloads</a>
+              <a class="dropdown-item" href="/downloads.html">Downloads</a>
+
               <a class="dropdown-item" href="/career.html">Careers</a>
             </div>
           </li>
@@ -167,24 +168,142 @@
     </div>
   </section>
 
-  <section class="p-5">
+  <section class="p-5 ism-generic_tabbing ">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6">
-          <div class=""><img src="./images/about-ism/about-ism.webp" alt=""></div>
+        <div class="col-12">
+        <div class="ism-generic_tabbing  v3">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation"><button aria-controls="current" aria-selected="true" class="nav-link active" data-bs-target="#current" data-bs-toggle="tab" id="current-tab" role="tab" type="button"><span>Current</span></button></li>
+          <li class="nav-item" role="presentation"><button aria-controls="archive" aria-selected="false" class="nav-link" data-bs-target="#archive" data-bs-toggle="tab" id="archive-tab" role="tab" type="button"><span>Archive</span></button></li>
+        </ul>
+        
+        <div class="tab-content" id="myTabSemicon">
+        <div aria-labelledby="current-tab" class="tab-pane fade show active" id="current" role="tabpanel">
+        <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>S.No</th>
+              <th class="w-100">TItle</th>
+              <th class="text-center">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td class="w-100">Revised Guidelines for effective functioning of the Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab/ Discrete Semiconductors Fab and Semiconductor Assembly, Testing, Marking and Packaging (ATMP)/ Outsourced Semiconductor Assembly and Test (OSAT) facilities in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Jul/03/1688365239_Revised_Guidelines_for_Modified_Scheme_for_setting_up_of_Compound_Semiconductors_and_ATMP_facilties_in_India-30.06.2023.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td class="w-100">Modified Semicon India Program</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Feb/16/1676530089_1675877503_India_Semicon_Europa.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td class="w-100">Modified Scheme for setting up of Semiconductor Fabs in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665119978_Notification_Modified_Scheme_for_Semiconductor_Fabs.pdf	" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td class="w-100">Modified Scheme for setting up of Display Fabs in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120088_Notification_Modified_Scheme_for_Display_Fabs.pdf	" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td class="w-100">Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab/</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120229_Notification_Modified_Scheme_for_Compound_Semiconductor_ATMP.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td class="w-100">Design Linked Incentive (DLI) Scheme</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757254_notification_dli.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td class="w-100">Guidelines for Modified Scheme for setting up of Semiconductor Fabs in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/May/31/1685527229_Guidelines_for_Modified_Scheme_for_setting_up_of_Semiconductor_Fabs_in_India.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td class="w-100">Guidelines for Modified Scheme for setting up of Display Fabs in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/May/31/1685527230_Guidelines_for_Modified_Scheme_for_setting_up_of_Display_Fabs_in_India.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td class="w-100">Guidelines for Design Linked Incentive (DLI) Scheme</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757229_guidelines_dli.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td class="w-100">Threshold and Ceiling Limits</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757377_threshold_and_ceiling_limits.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>11</td>
+              <td class="w-100">Required List of Enclosures</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756407_enclosure.pdf	" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+          </tbody>
+        </table>
         </div>
-        <div class="col-sm-6 p-5">
-          <div class="">
-            <p>India Semiconductor Mission (ISM) is a specialized and independent Business Division within the Digital
-              India Corporation that aims to build a vibrant semiconductor and display ecosystem to enable India’s
-              emergence as a global hub for electronics manufacturing and design. Led by global experts of the
-              Semiconductor and display ecosystem the mission aims to serve as a focal point for the comprehensive,
-              coherent, efficient, and smooth deployment of the Program for Development of Semiconductor and Display
-              Ecosystem in consultation with the Government ministries / departments / agencies, industry, and academia.
-            </p>
-          </div>
         </div>
-      </div>
+        
+        <div aria-labelledby="archive-tab" class="tab-pane fade" id="archive" role="tabpanel">
+        <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>S.No</th>
+              <th class="w-100">TItle</th>
+              <th class="text-center">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td class="w-100">Guidelines for effective functioning of the Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab/ Discrete Semiconductors Fab and Semiconductor Assembly, Testing, Marking and Packaging (ATMP)/ Outsourced Semiconductor Assembly and Test (OSAT) facilities in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/11/1665479548_Guidelines-for-Modified-Scheme-for-Compound-Semiconductors-and-ATMP.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td class="w-100">Guidelines for effective functioning of the Scheme for setting up ofCompound Semiconductors / Silicon Photonics / Sensors Fab and Semiconductor Assembly, Testing, Marking and Packaging (ATMP) / OSAT facilities in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756959_guidelines_compound_semiconductor_fab_atmp.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td class="w-100">Guidelines for Scheme for setting up of Semiconductor Fabs in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756298_guidelines_semiconductor_fab.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td class="w-100">Guidelines for Scheme for setting up of Display Fabs in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756595_guidelines_display_fab.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td class="w-100">Scheme for setting up of Semiconductor Fabs in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651758241_notification_semiconductor_fabs.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td class="w-100">Scheme for setting up of Display Fabs in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756645_notification_display_fabs.pdf" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td class="w-100">Scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab and Semiconductor Assembly, Testing, Marking and Packaging (ATMP) /OSAT facilities in India</td>
+              <td><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756985_notification_compound_semiconductor.pdf	" target="_blank"><span class="fa fa-download me-2"></span>Download</a></td>
+            </tr>
+          </tbody>
+        </table>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
     </div>
   </section>
 
