--- a/website-policies.html
+++ b/website-policies.html
@@ -139,7 +139,8 @@
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="#">Notice</a>
               <a class="dropdown-item" href="#">Tenders</a>
-              <a class="dropdown-item" href="#">Downloads</a>
+              <a class="dropdown-item" href="/downloads.html">Downloads</a>
+
               <a class="dropdown-item" href="/career.html">Careers</a>
             </div>
           </li>
