schemes page added

--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/about-us.css">
+  <link rel="stylesheet" href="./css/pages/scheme.css">
 </head>
 
 <body>
@@ -53,15 +53,16 @@
       <div class="row">
         <div class="col-12">
           <div class="ism-header__main_box">
-            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="https://www.meity.gov.in/"
-                target="_blank"><img alt="Miety logo" class="img-fluid" src="images/header/meity_header_logo.png"> </a>
+            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo"
+                href="https://www.meity.gov.in/" target="_blank"><img alt="Miety logo" class="img-fluid"
+                  src="images/header/meity_header_logo.png"> </a>
             </div>
-            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="/index.html"
-                target="_blank"><img alt="Digital india logo" class="img-fluid"
+            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo"
+                href="/index.html" target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/ism_header_logo.png"></a>
             </div>
-            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="https://dic.gov.in/"
-                target="_blank"><img alt="Digital india logo" class="img-fluid"
+            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo"
+                href="https://dic.gov.in/" target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/digi_india_header_logo.png"></a>
             </div>
           </div>
@@ -113,9 +114,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="/semiconductor-scheme.html">Semiconductor Fabs</a>
-<a class="dropdown-item" href="/display-scheme.html">Display Fabs</a>
-<a class="dropdown-item" href="/compound-scheme.html">Compound/ATMP/OSAT</a>
-<a class="dropdown-item" href="/design-link-scheme.html">Design Linked Incentive</a>
+              <a class="dropdown-item" href="/display-scheme.html">Display Fabs</a>
+              <a class="dropdown-item" href="/compound-scheme.html">Compound/ATMP/OSAT</a>
+              <a class="dropdown-item" href="/design-link-scheme.html">Design Linked Incentive</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -162,7 +163,7 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="ismv3-intro-banner design-link-scheme-banner"></div>
         </div>
       </div>
     </div>
@@ -171,33 +172,184 @@
   <section class="p-5">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6">
-          <div class=""><img src="./images/about-ism/about-ism.webp" alt=""></div>
-        </div>
+
         <div class="col-sm-6 p-5">
           <div class="">
-            <p>India Semiconductor Mission (ISM) is a specialized and independent Business Division within the Digital
-              India Corporation that aims to build a vibrant semiconductor and display ecosystem to enable India’s
-              emergence as a global hub for electronics manufacturing and design. Led by global experts of the
-              Semiconductor and display ecosystem the mission aims to serve as a focal point for the comprehensive,
-              coherent, efficient, and smooth deployment of the Program for Development of Semiconductor and Display
-              Ecosystem in consultation with the Government ministries / departments / agencies, industry, and academia.
-            </p>
+            <h1 class="sub-heading mb-4">About the Scheme </h1>
+            <p>The Design Linked Incentive (DLI) Scheme aims to offer financial incentives as well as design
+              infrastructure support across various stages of development and deployment of semiconductor design(s) for
+              Integrated Circuits (ICs), Chipsets, System on Chips (SoCs), Systems & IP Cores and semiconductor linked
+              design(s) over a period of 5 years. </p>
+            <div class="pt-4">
+              <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">
+                <span><img src="./images/icons/chip_icon.png" alt="" class="social-btn-icon size-big"></span>
+                <span class="mr-5">Apply</span>
+                <span><img src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class=""><img src="./images/design_scheme.webp" alt=""></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container bg-primary-aqua br-8 career-tabs">
+      <div class="row align-items-center my-4">
+        <div class="col-4">
+          <p class="main-heading">Latest</p>
+          <p class="sub-heading">Notifications</p>
+        </div>
+        <div class="col-8">
+          <div class="text-right">
+            <ul class="nav nav-tabs" id="myTab2" role="tablist"
+            style="justify-content: end;background: #F3F6FD;padding: 16px;border:none;display: inline-flex;background: #fff;border-radius: 8px;">
+            <li class="nav-item" role="presentation"><button aria-controls="photos" aria-selected="true"
+                class="nav-link active" data-bs-target="#photos" data-bs-toggle="tab" id="photos-tab" role="tab"
+                type="button"><span class="px-3">Current</span></button></li>
+            <li class="nav-item" role="presentation"><button aria-controls="videos" aria-selected="false"
+                class="nav-link" data-bs-target="#videos" data-bs-toggle="tab" id="videos-tab" role="tab"
+                type="button"><span class="px-3">Archives</span></button></li>
+          </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="tab-content" id="myTabSemicon2">
+          <div aria-labelledby="photos-tab" class="tab-pane fade active show" id="photos" role="tabpanel">
+            <div class="row ism-elem10_wrap m-0">
+              <div class="col-12">
+                <div class="notification-tabs d-flex align-content-center br-8">
+                  <div class="notification-icon"><img src="images/notification_icon.png" alt="" style="height:40px; width:40px;"></div>
+                  <div class="notification-text align-content-center">Revised Guidelines for effective functioning of the
+                    Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab. 11/10/2024
+                    <span class="notification-date"></span>
+                  </div>
+                  <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt="" style="height:40px; width:40px;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div aria-labelledby="videos-tab" class="tab-pane fade" id="videos" role="tabpanel">
+            <div class="ism-elem10_wrap m-0">
+              <div class="row ism-elem10_wrap m-0">
+                <div class="col-12">
+                  <div class="notification-tabs d-flex align-content-center br-8">
+                    <div class="notification-icon"><img src="images/notification_icon.png" alt="" style="height:40px; width:40px;"></div>
+                    <div class="notification-text align-content-center">Revised Guidelines for effective functioning of the
+                      Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab. 11/10/2024
+                      <span class="notification-date"></span>
+                    </div>
+                    <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt="" style="height:40px; width:40px;"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
+  <section>
+    <div class="container">
+      <p class="sub-heading">More Details</p>
+      <div class="row">
+        <div class="col-sm">
+          <div class="details-cards">
+            <div class="details-cards_title">Objective</div>
+            <div class="details-cards_content">To attract large investments for setting up semiconductor wafer fabrication facilities in the country to strengthen the electronics manufacturing ecosystem and help establish a trusted value chain.            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="details-cards">
+            <div class="details-cards_title">Eligibility</div>
+            <div class="details-cards_content">Companies / Consortia / Joint Ventures proposing to set up a Silicon CMOS based Semiconductor Fab in India for manufacturing Logic / Memory / Digital ICs / Analog ICs / Mixed Signal ICs / SoCs            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="details-cards">
+            <div class="details-cards_title">Tenure of the Scheme </div>
+            <div class="details-cards_content">Support under the scheme shall be provided for a period of six years. The tenure of the actual fiscal support outflow may be extended based on the approval of the Minister of Electronics and Information Technology.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <p class="sub-heading">Procedure to Apply</p>
+      <div class="row">
+        <div class="col-sm">
+          <div class="scheme-apply-cards scheme-apply-cards_bg1">
+            <div class="scheme-apply-cards_title">
+              <div><img src="./images/icons/step_1.png" alt=""></div>
+              <h3>Registration</h3>
+            </div>
+            <div class="scheme-apply-cards_content-box">
+              <div class="scheme-apply-cards_content-box_heading">
+                <p>Submission of relevant information to register with ISM and submit application</p>
+              </div>
+            </div>           
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="scheme-apply-cards scheme-apply-cards_bg2">
+            <div class="scheme-apply-cards_title">
+              <div><img src="./images/icons/step_2.png" alt=""></div>
+              <h3>Proposal</h3>
+            </div>
+            <div class="scheme-apply-cards_content-box">
+              <div class="scheme-apply-cards_content-box_heading">
+                <p>Submission of relevant information to register with ISM and submit application</p>
+              </div>
+            </div>           
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="scheme-apply-cards scheme-apply-cards_bg3">
+            <div class="scheme-apply-cards_title">
+              <div><img src="./images/icons/step_3.png" alt=""></div>
+              <h3>Payment of Fee</h3>
+            </div>
+            <div class="scheme-apply-cards_content-box">
+              <div class="scheme-apply-cards_content-box_heading">
+                <p>Submission of relevant information to register with ISM and submit application</p>
+              </div>
+            </div>           
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="scheme-apply-cards scheme-apply-cards_bg4">
+            <div class="scheme-apply-cards_title">
+              <div><img src="./images/icons/step_4.png" alt=""></div>
+              <h3>Fiscal Support</h3>
+            </div>
+            <div class="scheme-apply-cards_content-box">
+              <div class="scheme-apply-cards_content-box_heading">
+                <p>Submission of relevant information to register with ISM and submit application</p>
+              </div>
+              <div class="scheme-apply-cards_content-box__sub-heading">
+                <p>Submission of relevant information to register with ISM and submit application</p>
+              </div>
+            </div>           
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <footer class="ism-footer">
     <div class=" ism-footer-inner-box">
       <div class="ism-footer-logo ism-footer-box-size">
-        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
-            width="70%"></a>
-        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
-            width="55%"></a>
-        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
-            alt="" width="55%;"></a>
+        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/Ism_footer_logo.png" alt="" width="70%"></a>
+        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/meity_footer_logo.png" alt="" width="55%"></a>
+        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/Digi_india_footer_logo.png" alt="" width="55%;"></a>
       </div>
       <div class="vl"></div>
       <div class="ism-footer-useful ism-footer-box-size">
@@ -205,8 +357,10 @@
           <h5 class="mb-5">Useful Links</h5>
           <ul>
             <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
-            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
+            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
+                Policies</a></li>
+            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
+                Policies</a></li>
             <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
             <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
