--- a/gallery-details.html
+++ b/gallery-details.html
@@ -83,7 +83,7 @@
               About ISM
             </a>
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
-              <a class="dropdown-item" href="#">Our Ministers</a>
+              <a class="dropdown-item" href="/our-ministers.html">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
               <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
@@ -110,10 +110,10 @@
               Schemes
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
-              <a class="dropdown-item" href="#">Semiconductor Fabs</a>
-              <a class="dropdown-item" href="#">Display Fabs</a>
-              <a class="dropdown-item" href="#">Compound/ATMP/OSAT</a>
-              <a class="dropdown-item" href="#">Design Linked Incentive</a>
+              <a class="dropdown-item" href="/semiconductor-scheme.html">Semiconductor Fabs</a>
+<a class="dropdown-item" href="/display-scheme.html">Display Fabs</a>
+<a class="dropdown-item" href="/compound-scheme.html">Compound/ATMP/OSAT</a>
+<a class="dropdown-item" href="/design-link-scheme.html">Design Linked Incentive</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -122,8 +122,8 @@
               Notifications
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
-              <a class="dropdown-item" href="#">Notice</a>
-              <a class="dropdown-item" href="#">Tenders</a>
+              <a class="dropdown-item" href="/notices.html">Notice</a>
+              <a class="dropdown-item" href="/tenders.html">Tenders</a>
               <a class="dropdown-item" href="/downloads.html">Downloads</a>
 
               <a class="dropdown-item" href="/career.html">Careers</a>
