--- a/ism-vision.html
+++ b/ism-vision.html
@@ -85,7 +85,7 @@
               About ISM
             </a>
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
-              <a class="dropdown-item" href="#">Our Ministers</a>
+              <a class="dropdown-item" href="/our-ministers.html">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
               <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
@@ -124,8 +124,8 @@
               Notifications
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
-              <a class="dropdown-item" href="#">Notice</a>
-              <a class="dropdown-item" href="#">Tenders</a>
+              <a class="dropdown-item" href="/notices.html">Notice</a>
+              <a class="dropdown-item" href="/tenders.html">Tenders</a>
               <a class="dropdown-item" href="/downloads.html">Downloads</a>
 
               <a class="dropdown-item" href="/career.html">Careers</a>
