--- a/notices.html
+++ b/notices.html
@@ -16,7 +16,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/about-us.css">
+  <link rel="stylesheet" href="./css/pages/notice.css">
+  <style>
+
+  </style>
 </head>
 
 <body>
@@ -53,15 +56,16 @@
       <div class="row">
         <div class="col-12">
           <div class="ism-header__main_box">
-            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="https://www.meity.gov.in/"
-                target="_blank"><img alt="Miety logo" class="img-fluid" src="images/header/meity_header_logo.png"> </a>
+            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo"
+                href="https://www.meity.gov.in/" target="_blank"><img alt="Miety logo" class="img-fluid"
+                  src="images/header/meity_header_logo.png"> </a>
             </div>
-            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="/index.html"
-                target="_blank"><img alt="Digital india logo" class="img-fluid"
+            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo"
+                href="/index.html" target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/ism_header_logo.png"></a>
             </div>
-            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="https://dic.gov.in/"
-                target="_blank"><img alt="Digital india logo" class="img-fluid"
+            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo"
+                href="https://dic.gov.in/" target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/digi_india_header_logo.png"></a>
             </div>
           </div>
@@ -167,37 +171,118 @@
       </div>
     </div>
   </section>
-
-  <section class="p-5">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class=""><img src="./images/about-ism/about-ism.webp" alt=""></div>
-        </div>
-        <div class="col-sm-6 p-5">
-          <div class="">
-            <p>India Semiconductor Mission (ISM) is a specialized and independent Business Division within the Digital
-              India Corporation that aims to build a vibrant semiconductor and display ecosystem to enable India’s
-              emergence as a global hub for electronics manufacturing and design. Led by global experts of the
-              Semiconductor and display ecosystem the mission aims to serve as a focal point for the comprehensive,
-              coherent, efficient, and smooth deployment of the Program for Development of Semiconductor and Display
-              Ecosystem in consultation with the Government ministries / departments / agencies, industry, and academia.
-            </p>
+  <section class="">
+    <div>
+      <div class="row p-5">
+        <div class="col-sm-12 table-container">
+          <div class="">           
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th class="text-center">Sr. No.</th>
+                    <th class="w-70">Title</th>
+                    <th>Date</th>
+                    <th class="text-center">Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="text-center">1</td>
+                    <td class="w-70">Establishing Resilient Supply Chains for Electronics & Semiconductor Manufacturing</td>
+                    <td>18 Jun 2024</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post/18/1718688286.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">2</td>
+                    <td class="w-70">Giant leap for India Semiconductor Mission Cabinet approves three more semiconductor units</td>
+                    <td>29 Feb 2024</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post/18/1709270425.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">3</td>
+                    <td class="w-70">Revised Guidelines for effective functioning of the Modified scheme for setting up of Compound
+                      Semiconductors / Silicon Photonics / Sensors Fab/ Discrete Semiconductors Fab and Semiconductor
+                      Assembly, Testing, Marking and Packaging (ATMP)</td>
+                    <td>30 Jun 2023</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post/18/1702269642.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">4</td>
+                    <td class="w-70">Applications are invited through the portal of India Semiconductor Mission (ISM) for setting up
+                      Semiconductor and Display Fabs as per the Modified Semicon India Programme from 1st June 2023.
+                    </td>
+                    <td>31 May 2023</td>
+                    <td class="text-center">-</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">5</td>
+                    <td class="w-70">Guidelines for Modified Scheme for setting up of Semiconductor Fabs in India</td>
+                    <td>30 Jun 2023</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Sep/26/1695749443_1685532319_Guidelines_for_Modified_Scheme_for_setting_up_of_Semiconductor_Fabs_in_India.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">6</td>
+                    <td class="w-70">Guidelines for Modified Scheme for setting up of Display Fabs in India</td>
+                    <td>29 May 2023</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Sep/27/1695787828_1685532435_Guidelines_for_Modified_Scheme_for_setting_up_of_Display_Fabs_in_India.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">7</td>
+                    <td class="w-70">Government invites applications for setting up Semiconductor and Display Fabs as per the
+                      Modified Semicon India Programme from 1st June 2023</td>
+                    <td>29 May 2023</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Sep/27/1695787982_1685531924_PIB1928479.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">8</td>
+                    <td class="w-70">02 Application under Design Linked Incentive Scheme has been approved.</td>
+                    <td>12 May 2023</td>
+                    <td class="text-center">-</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">9</td>
+                    <td class="w-70">03 Application under Design Linked Incentive Scheme has been approved.</td>
+                    <td>24 Feb 2023</td>
+                    <td class="text-center">-</td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">10</td>
+                    <td class="w-70">Semicon India Conference of Electronics Manufacturing Supply Chain Ecosystem</td>
+                    <td>18 Feb 2023</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Sep/27/1695788428_1676647907_semiconductor_agenda.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">11</td>
+                    <td class="w-70">Indian Electronics Overview</td>
+                    <td>18 Feb 2023</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Sep/27/1695788741_1676530089_1675877503_India_Semicon_Europa.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">12</td>
+                    <td class="w-70">National Policy on Electronics 2019 (NPE 2019)</td>
+                    <td>25 Feb 2019</td>
+                    <td class="text-center"><a class="theme-Btn theme-Btn-dark" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/Sep/27/1695789006_1685533270_Notification_NPE_2019_25022019.pdf" target="_blank"><span class="fa fa-file-pdf me-2"></span>Read More</a></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+
   <footer class="ism-footer">
     <div class=" ism-footer-inner-box">
       <div class="ism-footer-logo ism-footer-box-size">
-        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
-            width="70%"></a>
-        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
-            width="55%"></a>
-        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
-            alt="" width="55%;"></a>
+        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/Ism_footer_logo.png" alt="" width="70%"></a>
+        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/meity_footer_logo.png" alt="" width="55%"></a>
+        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/Digi_india_footer_logo.png" alt="" width="55%;"></a>
       </div>
       <div class="vl"></div>
       <div class="ism-footer-useful ism-footer-box-size">
@@ -205,8 +290,10 @@
           <h5 class="mb-5">Useful Links</h5>
           <ul>
             <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
-            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
+            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
+                Policies</a></li>
+            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
+                Policies</a></li>
             <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
             <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
