schemes page done

--- a/our-team.html
+++ b/our-team.html
@@ -169,7 +169,7 @@
   </section>
   <section>
     <div class="container">
-      <div class="row row justify-content-center">
+      <div class="row justify-content-center pt-4">
         <div class="col-12 col-md-12 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
           <div class="ism-cards">
             <div class="ism-cards_box"
