--- a/compound-scheme.html
+++ b/compound-scheme.html
@@ -168,7 +168,28 @@
       </div>
     </div>
   </section>
-
+  <section>
+    <div class="container bg-primary-aqua my-4">
+      <div class="row pt-2 pb-3 justify-content-center">
+        <div class="col-auto">
+          <div>
+            <a href="#" target="_blank" class="theme-Btn theme-Btn-dark user-btn-pad">
+              <span><img src="./images/icons/add-user-icon.png" alt="" class="social-btn-icon size-big"></span>
+              <span class="mx-2">New User | Register</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-auto">
+          <div>
+            <a href="#" target="_blank" class="theme-Btn theme-Btn-dark user-btn-pad">
+              <span><img src="./images/icons/existing-user-icon.png" alt="" class="social-btn-icon size-big"></span>
+              <span class="mx-2">Existing User | Login</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>    
+  </section>
   <section class="p-5">
     <div class="container-fluid">
       <div class="row">
@@ -197,7 +218,7 @@
     </div>
   </section>
   <section>
-    <div class="container bg-primary-aqua br-8 career-tabs">
+    <div class="container bg-primary-aqua br-8 career-tabs py-4">
       <div class="row align-items-center my-4">
         <div class="col-4">
           <p class="main-heading">Latest</p>
@@ -254,9 +275,63 @@
       </div>
     </div>
   </section>
-  <section>
+  <!-- <section>
     <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="accordion gc-wrapper" id="accordionExample">
+            <div class="accordion-item ">
+              <h2 class="accordion-header" id="headingOne">
+                <button aria-controls="collapseOne" aria-expanded="false"
+                  class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
+                  type="button"><span class="main-heading">Compound Semiconductor</span></button></h2>
+
+              <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
+                <div class="accordion-body">
+                  <div class="gc-wrapper">
+                    <ul>
+                      <li>The electronics industry is the world’s largest and fastest growing industry with applications in all sectors of the economy. Semiconductors have been a key enabler in the advancement of electronics for the past 50 years and will continue to play an even greater role with the introduction of new applications including IoT, artificial intelligence, 5G, smart cars, smart factories, data centres, robotics, etc.</li>
+                      <li>Semiconductor manufacturing is a complex and research-intensive sector, defined by rapid changes in technology which require significant and sustained investment. In the micro-electronics industry, integrated circuits (ICs) and discrete semiconductor devices are produced in a wafer Fabrication facility, commonly known as a Fab. Semiconductors are at the heart of electronic products and constitute a significant part of the Bill of Materials (BOM).</li>
+                      <li>The vision of National Policy on Electronics 2019 (NPE 2019) is to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and create an enabling environment for the industry to compete globally. One of the main strategies of NPE 2019 is to facilitate setting up of semiconductor Fab facilities and its eco-system for design and fabrication of chips and chip components</li>
+                      <li>Fiscal support: The scheme shall extend a fiscal support of 50% of the Capital Expenditure for setting up of Compound Semiconductors / Silicon Photonics (SiPh) / Sensors (including MEMS) Fab/ Discrete Semiconductor Fab and Semiconductor ATMP / OSAT facilities in India</li>
+                      <li>Additional financial support, if any, offered by the State Government or any of its agencies or local bodies may also be availed. However, an applicant under this Scheme will not avail incentive under the Scheme for Promotion of Manufacturing of Electronic Components and Semiconductors (SPECS) under the Semiconductor Fab, Compound Semiconductors Fab and ATMP category</li>
+                    </ul>
+                    </div>
+                  </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section> -->
+  <section>
+    <div class="container my-5">
       <p class="sub-heading">More Details</p>
+      <div class="row">
+        <div class="accordion gc-wrapper mt-2 mb-4" id="accordionExample">
+          <div class="accordion-item ">
+            <h2 class="accordion-header" id="headingOne">
+              <button aria-controls="collapseOne" aria-expanded="false"
+                class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
+                type="button"><span class="accordion-header_text">Display Fabs Scheme</span></button></h2>
+
+            <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
+              <div class="accordion-body">
+                <div class="gc-wrapper">
+                  <ul>
+                    <li>The electronics industry is the world’s largest and fastest growing industry with applications in all sectors of the economy. Semiconductors have been a key enabler in the advancement of electronics for the past 50 years and will continue to play an even greater role with the introduction of new applications including IoT, artificial intelligence, 5G, smart cars, smart factories, data centres, robotics, etc.</li>
+                    <li>Semiconductor manufacturing is a complex and research-intensive sector, defined by rapid changes in technology which require significant and sustained investment. In the micro-electronics industry, integrated circuits (ICs) and discrete semiconductor devices are produced in a wafer Fabrication facility, commonly known as a Fab. Semiconductors are at the heart of electronic products and constitute a significant part of the Bill of Materials (BOM).</li>
+                    <li>The vision of National Policy on Electronics 2019 (NPE 2019) is to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and create an enabling environment for the industry to compete globally. One of the main strategies of NPE 2019 is to facilitate setting up of semiconductor Fab facilities and its eco-system for design and fabrication of chips and chip components</li>
+                    <li>Fiscal support: The scheme shall extend a fiscal support of 50% of the Capital Expenditure for setting up of Compound Semiconductors / Silicon Photonics (SiPh) / Sensors (including MEMS) Fab/ Discrete Semiconductor Fab and Semiconductor ATMP / OSAT facilities in India</li>
+                    <li>Additional financial support, if any, offered by the State Government or any of its agencies or local bodies may also be availed. However, an applicant under this Scheme will not avail incentive under the Scheme for Promotion of Manufacturing of Electronic Components and Semiconductors (SPECS) under the Semiconductor Fab, Compound Semiconductors Fab and ATMP category</li>
+                  </ul>
+                </div>
+                </div>
+            </div>
+          </div>
+      </div>
+      </div>
       <div class="row">
         <div class="col-sm">
           <div class="details-cards">
@@ -281,7 +356,7 @@
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container mb-5">
       <p class="sub-heading">Procedure to Apply</p>
       <div class="row">
         <div class="col-sm">
@@ -409,10 +484,8 @@
     <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 
 </body>
 
