--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -168,7 +168,28 @@
       </div>
     </div>
   </section>
-
+  <section>
+    <div class="container bg-primary-aqua my-4">
+      <div class="row pt-2 pb-3 justify-content-center">
+        <div class="col-auto">
+          <div>
+            <a href="#" target="_blank" class="theme-Btn theme-Btn-dark user-btn-pad">
+              <span><img src="./images/icons/add-user-icon.png" alt="" class="social-btn-icon size-big"></span>
+              <span class="mx-2">New User | Register</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-auto">
+          <div>
+            <a href="#" target="_blank" class="theme-Btn theme-Btn-dark user-btn-pad">
+              <span><img src="./images/icons/existing-user-icon.png" alt="" class="social-btn-icon size-big"></span>
+              <span class="mx-2">Existing User | Login</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>    
+  </section>
   <section class="p-5">
     <div class="container-fluid">
       <div class="row">
@@ -196,7 +217,7 @@
     </div>
   </section>
   <section>
-    <div class="container bg-primary-aqua br-8 career-tabs">
+    <div class="container bg-primary-aqua br-8 career-tabs py-4">
       <div class="row align-items-center my-4">
         <div class="col-4">
           <p class="main-heading">Latest</p>
@@ -253,9 +274,63 @@
       </div>
     </div>
   </section>
-  <section>
+  <!-- <section>
     <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="accordion gc-wrapper" id="accordionExample">
+            <div class="accordion-item ">
+              <h2 class="accordion-header" id="headingOne">
+                <button aria-controls="collapseOne" aria-expanded="false"
+                  class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
+                  type="button"><span class="main-heading">Design Linked incentive (DLI)</span></button></h2>
+
+              <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
+                <div class="accordion-body">
+                  <div class="gc-wrapper">
+                    <ul>
+                        <li>
+                            Semiconductors are at the heart of all electronic products and constitute a significant share in the Bill of Material (BOM). The National Policy on Electronics 2019 aims to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and envisions creation of a vibrant semiconductor chip design ecosystem in the country. With an exceptional talent pool of 20% of world's semiconductor design engineers and thousands of chips designed by them every year in the country, India is poised
+                            for growth to achieve self-reliance and technology leadership in semiconductor design sector.
+                        </li>
+                        <li>Ministry of Electronics and Information technology has announced the Design Linked Incentive (DLI) Scheme to offset the disabilities in the domestic industry involved in semiconductor design in order to not only move up in value-chain but also strengthen the semiconductor chip design ecosystem in the country. CDAC is responsible for implementation of the DLI Scheme as Nodal Agency.</li>
+                    </ul>
+                </div>
+                  </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section> -->
+  <section>
+    <div class="container my-5">
       <p class="sub-heading">More Details</p>
+      <div class="row">
+        <div class="accordion gc-wrapper mt-2 mb-4" id="accordionExample">
+          <div class="accordion-item ">
+            <h2 class="accordion-header" id="headingOne">
+              <button aria-controls="collapseOne" aria-expanded="false"
+                class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
+                type="button"><span class="accordion-header_text">Display Fabs Scheme</span></button></h2>
+
+            <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
+              <div class="accordion-body">
+                <div class="gc-wrapper">
+                  <ul>
+                    <li>
+                        Semiconductors are at the heart of all electronic products and constitute a significant share in the Bill of Material (BOM). The National Policy on Electronics 2019 aims to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and envisions creation of a vibrant semiconductor chip design ecosystem in the country. With an exceptional talent pool of 20% of world's semiconductor design engineers and thousands of chips designed by them every year in the country, India is poised
+                        for growth to achieve self-reliance and technology leadership in semiconductor design sector.
+                    </li>
+                    <li>Ministry of Electronics and Information technology has announced the Design Linked Incentive (DLI) Scheme to offset the disabilities in the domestic industry involved in semiconductor design in order to not only move up in value-chain but also strengthen the semiconductor chip design ecosystem in the country. CDAC is responsible for implementation of the DLI Scheme as Nodal Agency.</li>
+                </ul>
+                </div>
+                </div>
+            </div>
+          </div>
+      </div>
+      </div>
       <div class="row">
         <div class="col-sm">
           <div class="details-cards">
@@ -280,7 +355,7 @@
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container mb-5">
       <p class="sub-heading">Procedure to Apply</p>
       <div class="row">
         <div class="col-sm">
@@ -408,10 +483,8 @@
     <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 
 </body>
 
