--- a/semiconductor-scheme.html
+++ b/semiconductor-scheme.html
@@ -168,7 +168,28 @@
       </div>
     </div>
   </section>
-
+  <section>
+    <div class="container bg-primary-aqua my-4">
+      <div class="row pt-2 pb-3 justify-content-center">
+        <div class="col-auto">
+          <div>
+            <a href="#" target="_blank" class="theme-Btn theme-Btn-dark user-btn-pad">
+              <span><img src="./images/icons/add-user-icon.png" alt="" class="social-btn-icon size-big"></span>
+              <span class="mx-2">New User | Register</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-auto">
+          <div>
+            <a href="#" target="_blank" class="theme-Btn theme-Btn-dark user-btn-pad">
+              <span><img src="./images/icons/existing-user-icon.png" alt="" class="social-btn-icon size-big"></span>
+              <span class="mx-2">Existing User | Login</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>    
+  </section>
   <section class="p-5">
     <div class="container-fluid">
       <div class="row">
@@ -196,7 +217,7 @@
     </div>
   </section>
   <section>
-    <div class="container bg-primary-aqua br-8 career-tabs">
+    <div class="container bg-primary-aqua br-8 career-tabs py-4">
       <div class="row align-items-center my-4">
         <div class="col-4">
           <p class="main-heading">Latest</p>
@@ -261,9 +282,69 @@
       </div>
     </div>
   </section>
-  <section>
+  <!-- <section>
     <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="accordion gc-wrapper mt-2 mb-4" id="accordionExample">
+            <div class="accordion-item ">
+              <h2 class="accordion-header" id="headingOne">
+                <button aria-controls="collapseOne" aria-expanded="false"
+                  class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
+                  type="button"><span class="main-heading">Semiconductor Fab</span></button></h2>
+
+              <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
+                <div class="accordion-body">
+                  <div class="gc-wrapper">
+                    <ul>
+                      <li>Electronics permeates all sectors of the economy and the electronics industry has cross-cutting economic and strategic importance. Currently valued at around USD 2 Trillion (?150 lakh crore), the global electronics market is expected to grow significantly given the increasing penetration of emerging technologies including 5G, IoT, Artificial Intelligence, Robotics, Smart Mobility, Smart Manufacturing, etc.</li>
+                      <li>Semiconductors are building blocks of electronic devices. Semiconductors are used to power a vast array of electronic devices ranging from smartphones and cloud servers to modern cars, industrial automation, critical infrastructure and defence system.</li>
+                      <li>The vision of National Policy on Electronics 2019 (NPE 2019) is to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and create an enabling environment for the industry to compete globally. One of the main strategies of NPE 2019 is to facilitate setting up of semiconductor wafer fabrication facilities and its eco-system for design and fabrication of chip components.</li>
+                      <li>In case of fiscal support being provided as equity either in part or in full, Government of India’s share will not exceed 49% of total project equity.</li>
+                      <li>The structure and quantum of the fiscal support will be negotiated by the India Semiconductor Mission with the applicants who are selected on the basis of technological and financial evaluation of their proposals.</li>
+                      <li>Additional financial support, if any, offered by the State Government or any of its agencies or local bodies may also be availed.</li>
+                      <li>Expenditure Finance Committee shall determine the structure and quantum of fiscal support to be provided under the scheme in consultation with Ministry of Electronics and Information Technology and the Nodal Agency.</li>
+                    </ul>
+                    </div>
+                  </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section> -->
+  <section>
+    <div class="container my-5">
       <p class="sub-heading">More Details</p>
+      <div class="row">
+        <div class="accordion gc-wrapper mt-2 mb-4" id="accordionExample">
+          <div class="accordion-item ">
+            <h2 class="accordion-header" id="headingOne">
+              <button aria-controls="collapseOne" aria-expanded="false"
+                class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
+                type="button"><span class="accordion-header_text">Display Fabs Scheme</span></button></h2>
+
+            <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
+              <div class="accordion-body">
+                <div class="gc-wrapper">
+                
+                  <ul>
+                    <li>Electronics permeates all sectors of the economy and the electronics industry has cross-cutting economic and strategic importance. Currently valued at around USD 2 Trillion (?150 lakh crore), the global electronics market is expected to grow significantly given the increasing penetration of emerging technologies including 5G, IoT, Artificial Intelligence, Robotics, Smart Mobility, Smart Manufacturing, etc.</li>
+                    <li>Semiconductors are building blocks of electronic devices. Semiconductors are used to power a vast array of electronic devices ranging from smartphones and cloud servers to modern cars, industrial automation, critical infrastructure and defence system.</li>
+                    <li>The vision of National Policy on Electronics 2019 (NPE 2019) is to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and create an enabling environment for the industry to compete globally. One of the main strategies of NPE 2019 is to facilitate setting up of semiconductor wafer fabrication facilities and its eco-system for design and fabrication of chip components.</li>
+                    <li>In case of fiscal support being provided as equity either in part or in full, Government of India’s share will not exceed 49% of total project equity.</li>
+                    <li>The structure and quantum of the fiscal support will be negotiated by the India Semiconductor Mission with the applicants who are selected on the basis of technological and financial evaluation of their proposals.</li>
+                    <li>Additional financial support, if any, offered by the State Government or any of its agencies or local bodies may also be availed.</li>
+                    <li>Expenditure Finance Committee shall determine the structure and quantum of fiscal support to be provided under the scheme in consultation with Ministry of Electronics and Information Technology and the Nodal Agency.</li>
+                  </ul>
+            
+                </div>
+                </div>
+            </div>
+          </div>
+      </div>
+      </div>
       <div class="row">
         <div class="col-sm">
           <div class="details-cards">
@@ -294,7 +375,7 @@
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container mb-5">
       <p class="sub-heading">Procedure to Apply</p>
       <div class="row">
         <div class="col-sm">
@@ -422,10 +503,8 @@
     <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 
 </body>
 
