internal buttons linking

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <p class="sub-heading">What’s New</p>
         </div>
         <div class="col align-content-center text-right">
-          <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More <span><img
+          <a href="/notices.html" target="_blank" class="theme-Btn theme-Btn-dark">View More <span><img
                 src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
         </div>
       </div>
@@ -302,7 +302,7 @@
                     establishing
                     the semiconductor fabs.</p>
                   <div class="text-right">
-                    <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                    <a href="/semiconductor-scheme.html" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
                           src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
                 </div>
@@ -328,7 +328,7 @@
                     Finance Committee shall determine the structure and quantum of fiscal support under the scheme for
                     establishing the display fabs.</p>
                   <div class="text-right">
-                    <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                    <a href="/display-scheme.html" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
                           src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
 
@@ -354,7 +354,7 @@
                     fiscal support of 50% of capital expenditure to Compound Semiconductors / Silicon Photonics /
                     Sensors (including MEMS) Fabs and Semiconductor Packaging (ATMP / OSAT) units.</p>
                   <div class="text-right">
-                    <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                    <a href="/compound-scheme.html" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
                           src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
                 </div>
@@ -380,7 +380,7 @@
                     design(s) for Integrated Circuits (ICs), Chipsets, System on Chips (SoCs), Systems & IP Cores and
                     semiconductor linked design(s) over a period of 5 years.</p>
                   <div class="text-right">
-                    <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                    <a href="design-link-scheme.html" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
                           src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
                 </div>
@@ -485,7 +485,7 @@
               <!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
             </div>
             <div class="social-button text-center pt-4">
-              <a href="#" target="_blank" class="theme-Btn theme-Btn-dark"><span><img src="./images/x_btn_icon.png"
+              <a href="https://x.com/Semicon_India" target="_blank" class="theme-Btn theme-Btn-dark"><span><img src="./images/x_btn_icon.png"
                     alt="" class="social-btn-icon"></span>Twitter<span><img src="./images/arrow-btn_icon.png" alt=""
                     class="ml-3"></span></a>
             </div>
@@ -498,7 +498,7 @@
               height="366px;" frameborder="0" allowfullscreen="" title="Embedded post" id="style-3"></iframe>
             </div>
             <div class="social-button text-center pt-4">
-              <a href="#" target="_blank" class="theme-Btn theme-Btn-dark"><span><img src="./images/insta_btn_icon.png"
+              <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank" class="theme-Btn theme-Btn-dark"><span><img src="./images/insta_btn_icon.png"
                     alt="" class="social-btn-icon"></span>Instagram<span><img src="./images/arrow-btn_icon.png" alt=""
                     class="ml-3"></span></a>
             </div>
@@ -511,7 +511,7 @@
                 height="366px;" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
             </div>
             <div class="social-button text-center pt-4">
-              <a href="#" target="_blank" class="theme-Btn theme-Btn-dark"><span><img
+              <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank" class="theme-Btn theme-Btn-dark"><span><img
                     src="./images/linkedin_btn_icon.png" alt="" class="social-btn-icon"></span>LinkedIn<span><img
                     src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
             </div>
@@ -530,7 +530,7 @@
           <p class="sub-heading text-white border-bot">Conferences and Summits</p>
         </div>
         <div class="col align-content-center text-right">
-          <a href="#" target="_blank" class="theme-Btn theme-Btn-light">View More<span><img
+          <a href="/events.html" target="_blank" class="theme-Btn theme-Btn-light">View More<span><img
                 src="./images/arrow-btn_icon_dark.png" alt="" class="ml-3"></span></a>
         </div>
       </div>
@@ -589,7 +589,7 @@
           <p class="sub-heading">Visual Highlights</p>
         </div>
         <div class="col align-content-center text-right">
-          <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+          <a href="/gallery.html" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
                 src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
         </div>
       </div>
