--- a/career.html
+++ b/career.html
@@ -199,10 +199,10 @@
             style="justify-content: end;background: #F3F6FD;padding: 16px;border:none;display: inline-flex;background: #fff;border-radius: 8px;">
             <li class="nav-item" role="presentation"><button aria-controls="photos" aria-selected="true"
                 class="nav-link active" data-bs-target="#photos" data-bs-toggle="tab" id="photos-tab" role="tab"
-                type="button"><span class="px-3">Photos</span></button></li>
+                type="button"><span class="px-3">Active</span></button></li>
             <li class="nav-item" role="presentation"><button aria-controls="videos" aria-selected="false"
                 class="nav-link" data-bs-target="#videos" data-bs-toggle="tab" id="videos-tab" role="tab"
-                type="button"><span class="px-3">Videos</span></button></li>
+                type="button"><span class="px-3">Closed</span></button></li>
           </ul>
           </div>
         </div>
