--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -313,7 +313,7 @@
             <h2 class="accordion-header" id="headingOne">
               <button aria-controls="collapseOne" aria-expanded="false"
                 class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
-                type="button"><span class="accordion-header_text">Display Fabs Scheme</span></button></h2>
+                type="button"><span class="accordion-header_text">Design Link Scheme</span></button></h2>
 
             <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
               <div class="accordion-body">
